<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Illumidel</string>
    <string name="app_logo">Illumidel\'s Logo</string>
    <string name="add_a_device">Add or Discover a Device</string>
    <string name="looking_for_devices">Discovering Devices</string>
    <string name="add_device_manually">Add Manually</string>
    <string name="add_device">Add Device</string>
    <string name="ip_address_or_url">IP Address or URL</string>
    <string name="custom_name">Custom Name</string>
    <string name="leave_this_empty_to_use_the_device_name">Leave this field empty to use the device name</string>
    <string name="please_enter_value">Please enter a value</string>
    <string name="please_enter_valid_value">Please enter a valid value</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="default_device_name">(New Device)</string>
    <string name="default_ip" translatable="false">0.0.0.0</string>
    <string name="is_offline">Offline</string>
    <string name="update_available">Update Available</string>
    <string name="network_status">Network Status</string>
    <string name="refresh_list">Refresh List</string>
    <string name="refresh_page">Refresh Page</string>
    <string name="manage_devices">Manage Devices</string>
    <string name="remove">Remove</string>
    <string name="edit_device">Edit Device</string>
    <string name="edit_device_with_name">Edit Device - <xliff:g example="WLED" id="device_name">%1$s</xliff:g></string>
    <string name="remove_device">Remove Device</string>
    <string name="remove_device_confirm">Remove a device?</string>
    <string name="remove_device_confirm_text">Do you really want to remove %1$s [%2$s]?</string>
    <string name="save_device">Save Device</string>
    <string name="hide_device">Hide Device</string>
    <string name="device_is_hidden">Device is Hidden</string>
    <string name="hidden_status">[Hidden]</string>
    <string name="navigate_forward">Go Forward</string>
    <string name="navigate_backward">Go Backward</string>
    <string name="you_dont_have_any_devices_yet">You don\'t have any devices yet</string>
    <string name="find_my_device">Find my Device</string>
    <string name="awkward_akemi_character">Illumidel\'s Logo</string>
    <string name="device_list">My Devices</string>
    <string name="new_device_found">New Device Found</string>
    <string name="device_view">Device View</string>
    <string name="select_a_device">Select a Device</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="listing_options">Listing Options</string>
    <string name="automatically_discover_new_devices">Automatically Discover New Devices</string>
    <string name="show_offline_devices_last">Show Offline Devices Last</string>
    <string name="description_brightness_slider">Brightness Slider</string>
    <string name="description_menu_button">Open Menu</string>
    <string name="description_back_button">Go Back</string>
    <string name="description_list_of_discovered_devices">List of discovered devices</string>
    <string name="privacy">Privacy</string>
    <string name="send_crash_data_to_developer">Send Crash Data To Developer</string>
    <string name="send_performance_data_to_developer">Send Performance Data to Developer</string>
    <string name="device_ap_mode">Device AP Mode</string>
    <string name="device_ap_mode_detected">Device AP Mode Detected</string>
    <string name="device_ap_mode_detected_click">Click here to open Device</string>
    <string name="install">Install</string>
    <string name="later">Later</string>
    <string name="skip_this_version">Skip this Version</string>
    <string name="properties">Properties</string>
    <string name="check_for_update">Check for Update</string>
    <string name="from_version_to_version">
        From <xliff:g example="v0.13.0" id="old_version">%1$s</xliff:g> To <xliff:g example="v0.14.0" id="new_version">%2$s</xliff:g>
    </string>
    <string name="see_update_details">See Update</string>
    <string name="checking_progress_update">Checking…</string>
    <string name="updating">Updating %1$s</string>
    <string name="please_do_not_close_the_app_or_turn_off_the_device">Please do not close the app or turn off the device.</string>
    <string name="starting_up">Starting Up</string>
    <string name="downloading_version">Downloading Version</string>
    <string name="installing_update">Installing Update</string>
    <string name="update_failed">Update Failed</string>
    <string name="done">Done</string>
    <string name="update_completed">Update Completed!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="device_update_disclaimer_part1">You are about to install a new version of WLED on your device. If you had a custom version installed previously, you might lose some functionalities (for example, if you had some usermods enabled, they might not work anymore).</string>
    <string name="device_update_disclaimer_part2">If someone installed this device for you, you should maybe ask them if it is alright to update the device to a new version.</string>
    <string name="device_update_disclaimer_part3">WLED and WLED Native are not responsible if something goes wrong due to an update.</string>
    <string name="install_update">Install Update</string>
    <string name="ota_install_failed_device_locked">Your device might be PIN protected or locked with a passphrase.</string>
    <string name="no_compatible_version_found">No Compatible Version Found</string>
    <string name="no_compatible_version_found_details">No version that is compatible with your device could be found. You will need to manually update your device.</string>
    <string name="device_offline">Device Offline</string>
    <string name="show_error">Show Error</string>
    <string name="hide_error">Hide Error</string>
    <string name="visit_website">Visit Illumidel.com</string>
    <string name="help">Help</string>
    <string name="update_channel">Update Channel</string>
    <string name="stable">Stable</string>
    <string name="beta">Beta</string>
    <string name="your_device_is_up_to_date">Your device is up to date</string>
    <string name="version_v_num">Version <xliff:g example="v0.14.0" id="version_name">%1$s</xliff:g></string>
    <string name="select_a_device_from_the_list">Select a device from the list</string>
    <string name="french">Français</string>
    <string name="english">English</string>
    <string name="device_language">Device Language</string>
    <string name="device_language_change_details">You will need to install an update on the device after changing the language here</string>
    <string name="save_after_branch_change">Save the device after changing the channel to check for updates</string>
    <string name="downloading_file">Downloading File</string>
    <string name="help">WLED Help</string>
    <string name="support_me">Support Moustachauve</string>
</resources>