<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="?dialogPreferredPadding"
        tools:context=".fragment.ManageDeviceFragment">

        <TextView
            android:id="@+id/text_are_you_sure"
            style="@style/MaterialAlertDialog.Material3.Title.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_disclaimer"
            style="@style/MaterialAlertDialog.Material3.Body.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_update_disclaimer_part1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_are_you_sure" />

        <TextView
            android:id="@+id/text_disclaimer_help"
            style="@style/MaterialAlertDialog.Material3.Body.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/device_update_disclaimer_part2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_disclaimer" />

        <TextView
            android:id="@+id/text_disclaimer_responsability"
            style="@style/MaterialAlertDialog.Material3.Body.Text"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/device_update_disclaimer_part3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_disclaimer_help" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/button_continue"
            app:layout_constraintTop_toBottomOf="@id/text_disclaimer_responsability" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_continue"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/install_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_disclaimer_responsability" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>