<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="?dialogPreferredPadding"
        android:paddingBottom="?dialogPreferredPadding"
        android:paddingStart="?dialogPreferredPadding"
        android:paddingEnd="?dialogPreferredPadding"
        tools:context=".fragment.DeviceAddManuallyFragment">
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_device_with_name"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:paddingBottom="?dialogPreferredPadding"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/device_address_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip_address_or_url"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/custom_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:helperText="@string/leave_this_empty_to_use_the_device_name"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/device_address_text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/custom_name"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/hide_device_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hide_device"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_name_text_input_layout" />

        <TextView
            android:id="@+id/branch_toggle_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_language"
            android:textColor="?android:textColorPrimaryDisableOnly"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/branch_toggle_button_group"
            app:layout_constraintTop_toTopOf="@+id/branch_toggle_button_group"
            app:layout_constraintBottom_toBottomOf="@+id/branch_toggle_button_group"/>
        <TextView
            android:id="@+id/branch_toggle_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/device_language_change_details"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/branch_toggle_button_group" />


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/branch_toggle_button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hide_device_check_box"
            tools:checkedButton="@id/branch_stable_button">

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/branch_stable_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/french"
                />
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/branch_beta_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_update_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            style="?attr/materialCardViewFilledStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/branch_toggle_details">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <TextView
                    android:id="@+id/label_is_up_to_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_device_is_up_to_date"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/label_current_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_v_num"
                    android:textColor="?android:textColorPrimaryDisableOnly"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_is_up_to_date" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_check_for_update"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/check_for_update"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_current_version" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress_check_for_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_marginStart="10dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@id/button_check_for_update"
                    app:layout_constraintTop_toTopOf="@id/button_check_for_update"
                    app:layout_constraintBottom_toBottomOf="@id/button_check_for_update"
                    tools:visibility="visible"/>


                <ImageView
                    android:id="@+id/icon_update"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:contentDescription="@string/update_available"
                    android:showText="false"
                    android:layout_marginTop="3dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/update_details"
                    app:layout_constraintBottom_toBottomOf="@id/update_details"
                    app:srcCompat="@drawable/baseline_download_24" />

                <LinearLayout
                    android:id="@+id/update_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="2dp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/icon_update"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_check_for_update"
                    app:layout_constraintBottom_toBottomOf="@id/icon_update">
                    <TextView
                        android:id="@+id/update_available"
                        android:text="@string/update_available"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.Material3.TitleMedium"/>
                    <TextView
                        android:id="@+id/version_from_to"
                        android:text="@string/from_version_to_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"/>
                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_update"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:text="@string/see_update_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/update_details"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Widget.Material3.Button.TextButton"
            app:layout_constraintEnd_toStartOf="@id/button_save"
            app:layout_constraintTop_toBottomOf="@id/card_update_details"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_device"
            style="@style/Widget.Material3.Button.TextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_cancel"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>